--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,23 +76,8 @@ jobs:
 #          CLUSTER: dev-gcp
 #          RESOURCE: .nais/dev-gcp.yaml
 #          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
-#  deploy-prod-fss:
-#    name: Deploy to NAIS prod fss
-#    needs: build
-#    if: github.ref == 'refs/heads/master'
-#    runs-on: ubuntu-latest
-#    permissions:
-#      id-token: write
-#      contents: read
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: nais/deploy/actions/deploy@v2
-#        env:
-#          CLUSTER: prod-fss
-#          RESOURCE: .nais/prod-fss.yaml
-#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
-  deploy-prod-gcp:
-    name: Deploy to NAIS prod gcp
+  deploy-prod-fss:
+    name: Deploy to NAIS prod fss
     needs: build
 #    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -103,6 +88,21 @@ jobs:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: prod-gcp
-          RESOURCE: .nais/prod-gcp.yaml
-          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-gcp
+          CLUSTER: prod-fss
+          RESOURCE: .nais/prod-fss.yaml
+          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
+#  deploy-prod-gcp:
+#    name: Deploy to NAIS prod gcp
+#    needs: build
+##    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    permissions:
+#      id-token: write
+#      contents: read
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: prod-gcp
+#          RESOURCE: .nais/prod-gcp.yaml
+#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-gcp
