--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,23 +61,8 @@ jobs:
 #          CLUSTER: dev-fss
 #          RESOURCE: .nais/dev-fss.yaml
 #          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-fss
-#  deploy-dev-gcp:
-#    name: Deploy to NAIS dev gcp
-#    needs: build
-##    if: github.ref == 'refs/heads/master'
-#    runs-on: ubuntu-latest
-#    permissions:
-#      id-token: write
-#      contents: read
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: nais/deploy/actions/deploy@v2
-#        env:
-#          CLUSTER: dev-gcp
-#          RESOURCE: .nais/dev-gcp.yaml
-#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
-  deploy-prod-fss:
-    name: Deploy to NAIS prod fss
+  deploy-dev-gcp:
+    name: Deploy to NAIS dev gcp
     needs: build
 #    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -88,9 +73,24 @@ jobs:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: prod-fss
-          RESOURCE: .nais/prod-fss.yaml
-          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/dev-gcp.yaml
+          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
+#  deploy-prod-fss:
+#    name: Deploy to NAIS prod fss
+#    needs: build
+##    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    permissions:
+#      id-token: write
+#      contents: read
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: prod-fss
+#          RESOURCE: .nais/prod-fss.yaml
+#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
 #  deploy-prod-gcp:
 #    name: Deploy to NAIS prod gcp
 #    needs: build
