--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'application'
 
-    id 'org.jetbrains.kotlin.jvm' version '1.9.24'
-    id 'org.jmailen.kotlinter' version '3.2.0'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.21'
+    id 'org.jmailen.kotlinter' version '5.2.0'
     id 'com.gradleup.shadow' version '8.3.1'
 }
 
@@ -26,19 +26,6 @@ application {
 
 repositories {
     mavenCentral()
-    jcenter()
-
-    ["maven-release"].each { repo ->
-        String token = System.getenv("GITHUB_TOKEN") ?: project.findProperty("githubPassword")
-        if (!token) throw new NullPointerException("Missing token, you have to set GITHUB_TOKEN or githubPassword")
-        maven {
-            url = uri("https://maven.pkg.github.com/navikt/$repo")
-            credentials {
-                username = 'x-access-token'
-                password = token
-            }
-        }
-    }
 }
 
 configurations {
@@ -51,28 +38,20 @@ dependencies {
 
     implementation("org.json:json:20240303")
 
-    implementation "com.google.code.gson:gson:2.11.0"
+    implementation "com.google.code.gson:gson:2.13.2"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0"
 
-    implementation "org.http4k:http4k-core:5.14.4.0"
-    implementation "org.http4k:http4k-server-netty:5.14.4.0"
-    implementation "io.netty:netty-handler:4.1.118.Final" //Transient bump
-    implementation "io.netty:netty-common:4.1.118.Final" //Transient bump
-    implementation "org.http4k:http4k-client-okhttp:5.14.4.0"
+    implementation "org.http4k:http4k-core:6.20.1.0"
+    implementation "org.http4k:http4k-server-netty:6.20.1.0"
+    implementation "org.http4k:http4k-client-okhttp:6.20.1.0"
 
     implementation "io.github.microutils:kotlin-logging:3.0.5"
-    implementation "ch.qos.logback:logback-classic:1.5.18"
+    implementation "ch.qos.logback:logback-classic:1.5.20"
     implementation "net.logstash.logback:logstash-logback-encoder:8.1"
 
     implementation "io.prometheus:simpleclient_common:0.8.1"
     implementation "io.prometheus:simpleclient_hotspot:0.8.1"
-
-//    implementation "net.minidev:json-smart:2.4.9" //Desired transient json-smart to token-validation above
-//    implementation "org.apache.commons:commons-compress:1.26.0" //transient http4k-apache
-//    implementation "org.apache.httpcomponents:httpclient:4.5.13" //Desired transient httpclient to http4k-apache
-//    implementation "org.xerial.snappy:snappy-java:1.1.10.4" //Desired transient snappy to kafka-clients above
-//    implementation "com.nimbusds:nimbus-jose-jwt:9.37.2"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
@@ -88,11 +67,6 @@ sourceSets {
     test.kotlin.srcDirs += 'src/test/kotlin'
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-    kotlinOptions.jvmTarget = "21"
-}
-
-tasks.withType(JavaCompile) {
-    sourceCompatibility = "21"
-    targetCompatibility = "21"
+kotlin {
+    jvmToolchain(21)
 }
